@@ -53,10 +53,10 @@ namespace OpenRCT2::Scripting
     {
         News::Item result{};
         result.Type = GetParkMessageType(value["type"].as_string());
-        result.Assoc = value["subject"].as_int();
-        result.Ticks = value["tickCount"].as_int();
-        result.MonthYear = value["month"].as_int();
-        result.Day = value["day"].as_int();
+        result.Assoc = value["subject"].as_uint();
+        result.Ticks = value["tickCount"].as_uint();
+        result.MonthYear = value["month"].as_uint();
+        result.Day = value["day"].as_uint();
         result.Text = value["text"].as_string();
         return result;
     }
