@@ -33,7 +33,8 @@
 - Fix: [#21987] [Plugin] API cannot handle negative removal prices.
 - Fix: [#22008] Uninverted Lay-down roller coaster uses the wrong support type.
 - Fix: [#22012] [Plugin] Images on ImgButton widgets cannot be updated.
-- Fix: [#22121] Some news items in the “Recent Messages” window have the wrong text colour.  
+- Fix: [#22121] Some news items in the “Recent Messages” window have the wrong text colour.
+- Fix: [#22152] [Plugin] Negative signed integers are truncated.
 - Fix: [objects#323] Incorrect wall boundaries on large WW/TT scenery objects.
 - Fix: [objects#331] Incorrect hover car capacity string.
 - Fix: [objects#334] Incorrect school bus capacity string.
